--- a/SplitPage/SplitPage.css
+++ b/SplitPage/SplitPage.css
@@ -7,7 +7,7 @@
 /* Split the screen in half */
 .split {
   height: 100%;
-  width: 50%;
+  
   position: fixed;
   z-index: 1;
   top: 0;
@@ -17,6 +17,7 @@
 
 /* Control the left side */
 .left {
+  width: 40%;
   left: 0;
   background-color: white;
   padding-top: 20px;
@@ -24,42 +25,45 @@
 
 /* Control the right side */
 .right {
+  width: 60%;
   right: 0;
   background-color: blue;
 }
 
-/* If you want the content centered horizontally and vertically */
-.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-/* Style the image inside the centered container, if needed */
-.centered img {
-  width: 150px;
-  border-radius: 50%;
-}
 
 {box-sizing:border-box}
 
 .slides {
   display: none;
-
 }
-img {
+
+#fill {
+  display:flex;
+  flex-shrink: 0;
+
+  align-self: center;
+  overflow: hidden;
+  
+  
+}
+
+#fill img {
   vertical-align: middle;
-  max-height: 90%;
+  object-fit: fill;
+  min-height: 100%;
+  max-height: 200%;
+  max-width: 150%;
+  text-align: center;
+  margin: auto;
+  justify-content: center;
+  align-self: center;
 }
 
 .slideshow-container{
   display: flex;
   height: 60%;
-  width: auto;
-  position:relative;
-  margin: auto;
+  align-items: center;
+  overflow: hidden;
 }
 
 .prev, .next {
@@ -86,17 +90,27 @@ img {
   background-color: whitesmoke;
 }
 
-.slidetitle{
+.projtitle{
+  display: block;
   color: black;
+  background-color: white;
   font-size: 15px;
-  padding: 8px 12px;
+  font-size: 3vw;
+  
+  padding: 15px 15px;
   position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
+  top: 3em;
+  width: 50%;
+  text-align: left;
 }
 
-.slideinfo {
+.projdate {
+  top: 5em;
+  width: 30%;
+  
+}
+
+.projinfo {
   color: #f2f2f2;
   font-size: 12px;
   padding: 8px 12px;
@@ -105,10 +119,12 @@ img {
 }
 
 .buttons {
+  display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-
+  height: 20%;
   width: 10px;
+  padding-left: 30px;
 
 }
 
