--- a/SplitPage/SplitPage.css
+++ b/SplitPage/SplitPage.css
@@ -31,12 +31,6 @@
 }
 
 
-{box-sizing:border-box}
-
-.slides {
-  display: none;
-}
-
 #fill {
   float: left;
   width: 100%;
@@ -46,43 +40,31 @@
   min-height: 75vh;
 }
 
-.slideshow-container{
+#holster {
   display: flex;
+  align-items:center;
+  justify-content: space-between;
+  flex-flow: column nowrap;
   height: 60%;
+}
+
+.img-container{
+  display: flex;
   align-items: center;
   overflow: hidden;
 }
 
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top:50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
+.mandatory-scroll-snapping {
+  scroll-snap-type: y mandatory;
 }
 
-.next{
-  right:0;
-  border-radius: 3px 0 0 3px;
-}
 
-.prev:hover, .next:hover {
-  background-color: whitesmoke;
-}
 
 .proj {
 
 }
 
 .projtitle{
-  display: block;
   color: black;
   background-color: white;
   font-size: 15px;
@@ -96,7 +78,7 @@
 }
 
 .projdate {
-  top: 5em;
+  top: 6em;
   width: 25%;
   
 }
@@ -109,48 +91,7 @@
   top: 0;
 }
 
-.buttons {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  height: 20%;
-  width: 10px;
-  padding-left: 30px;
 
-}
-
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  
-}
-
-.active, .dot:hover {
-  background-color: yellow;
-}
-
-
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name:fade;
-  animation-duration: 1.5s;
-}
-
-
-@-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
 
 .heading {
   
